Make build Java 8 compatible